2008-01-25  Jim Evins  <evins@snaught.com>

	* src/bc.c:
		Fixed Code128C backend parameters.
	* src/label-barcode.c: (get_size):
		Bug #1766425.  If barcode is not renderable with either
		input data or default data, use a default size.  Also
		fixed small leak.

2008-01-22  Jim Evins  <evins@snaught.com>

	* NEWS:
	* configure.in:
		Preparation for 2.2.1 release.

2008-01-16  Jim Evins  <evins@snaught.com>

	* src/print.c: (print_label):
		Bug #1872568.  Don't apply special transforms (rotate and
		mirror) to clipping region or outline.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/util.c:
		Sort font lists alphabetically.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Do a case-insensitive sort.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Sort evolution by "file_under" field.  Original patch provided
		by Peter Cherriman <glabels-devel2712@bubieyehyeh.me.uk> in
		Patch #1860423.
	* AUTHORS:
		Added acknowledgement for above patch.

2007-12-25  Jim Evins  <evins@snaught.com>

	* glabels.spec.in:
		Fix spec file.
	
2007-12-25  Jim Evins  <evins@snaught.com>

	* MESSAGE-OF-DOOM:
		Removed for 2.2 stable branch.
	* Makefile.am:
	* NEWS:
	* configure.in:
		Prepare for 2.2.0 release.

2007-12-21  Jim Evins  <evins@snaught.com>

	* COPYING.LIBGLABELS:
	* COPYING.README_FIRST:
	* README:
		Updating license information to make more complete and understandable.

2007-12-16  Jim Evins  <evins@snaught.com>

	* configure.in:
		Updated version to 2.pre2.
	* help/C/glabels.xml:
		Updated documentation.
	* src/ui-commands.c: (gl_ui_cmd_help_about):
		Updated copyright string.

2007-12-15  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Removed any GtkTable that contained a GtkComboBox because the size of
		the combo box was not constrained properly.  This sacrifices the nice
		orderly labels for combo boxes that don't extend beyond the edge of the
		window.
